--- a/src/Components/Area/Area.scss
+++ b/src/Components/Area/Area.scss
@@ -11,7 +11,7 @@ h3 {
 .portafolio {
   border-radius: 5px;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
-  background-color: rgb(236, 236, 236);
+  background-color: rgb(255, 255, 255);
   margin: 15px 50px 30px 50px;
   padding: 10px;
 }
@@ -40,4 +40,11 @@ h3 {
 
 .image {
   align-items: center;
+}
+
+.inactive {
+  opacity: 0.5;
+}
+li {
+  cursor: pointer;
 }
