--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -33,7 +33,7 @@
 
 .mensaje {
   text-align: center;
-  padding: 40px;
+  padding: 20px;
   font-size: 50px;
   color: #c6c6c6;
   line-height: 45px;
@@ -72,4 +72,49 @@ h3 {
 h2 {
   font-size: 50px;
   color: #c6c6c6;
+}
+
+.banner {
+  background-color: rgba(237, 205, 31, 1);
+}
+
+.standAlone {
+  position: relative;
+}
+
+.standFull {
+  position: absolute;
+  top: 240px;
+  right: 100px;
+}
+
+.textFirst {
+  position: absolute;
+  top: 200px;
+  left: 100px;
+  color: white;
+  text-align: left;
+  font-size: 60px;
+  font-weight: 100;
+  line-height: 50px;
+}
+
+.textSecond {
+  position: absolute;
+  top: 280px;
+  left: -60px;
+  color: #888787;
+  text-align: left;
+  font-size: 60px;
+  font-weight: 700;
+  line-height: 50px;
+}
+
+.standFull {
+  display: none;
+}
+
+.animate__animated.animate__bounceInDown {
+  --animate-duration: 1.5s;
+  display: unset;
 }
