--- a/src/Components/Categories/Categories.scss
+++ b/src/Components/Categories/Categories.scss
@@ -1,10 +1,43 @@
 .showCategoiesList {
   display: inline-block;
+  text-align: center;
+  border-radius: 100px;
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
+  background-color: black;
+  margin: 15px 50px 30px 50px;
+  padding: 0 40px;
+  color: white;
+  font-weight: 700;
 
   .image {
     width: 150px;
     background-color: white;
     border-radius: 100px;
-    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
+    border: rgba(237, 205, 31, 1);
+    border-style: solid;
+    border-width: 8px;
   }
+
+  h3 {
+    color: white;
+  }
+}
+
+.choose {
+  font-size: 20px;
+  color: white;
+  margin-bottom: 25px;
+}
+
+.categoryProducts {
+  font-size: 60px;
+  color: #c6c6c6;
+  font-weight: 700;
+  line-height: 55px;
+}
+
+.whiteBar {
+  background-color: rgba(237, 205, 31, 1);
+  padding: 5px 10px;
+  margin: 0 150px 25px 150px;
 }
