--- a/src/Components/Form/Form.scss
+++ b/src/Components/Form/Form.scss
@@ -1,7 +1,9 @@
 .section2 {
-  h2 {
-    font-size: 50px;
-    color: #c6c6c6;
+  .startInfo {
+    font-size: 40px;
+    font-weight: 600;
+    color: #333;
+    padding-top: 30px;
   }
 
   h3 {
@@ -18,10 +20,14 @@
 
   input {
     padding: 12px;
-    border-radius: 50px;
-    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
-    background-color: rgb(236, 236, 236);
+    border-radius: 25px;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
+    background-color: rgb(255, 255, 255);
     font-size: 20px;
+    border-bottom: solid rgba(237, 205, 31, 1);
+    border-top: transparent;
+    border-left: transparent;
+    border-right: transparent;
   }
 
   .erros {
