--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -58,7 +58,6 @@ h3 {
 
 .BuiltYourOwnStand {
   padding-top: 45px;
-  line-height: 10px;
   font-size: 20px;
   color: #333;
 }
@@ -70,8 +69,10 @@ h3 {
 }
 
 h2 {
-  font-size: 50px;
+  font-size: 80px;
   color: #c6c6c6;
+  font-weight: 700;
+  line-height: 70px;
 }
 
 .banner {
