--- a/src/Components/Products/Products.scss
+++ b/src/Components/Products/Products.scss
@@ -32,10 +32,41 @@ h3 {
   padding-bottom: 10px;
 }
 
+.noFloorTipe {
+  opacity: 0.5;
+}
+
+.floorTipe {
+  font-size: 20px;
+  font-weight: 700;
+  background-color: rgb(0, 0, 0);
+  border-radius: 5px;
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
+  margin: 0 45px 10px 45px;
+  padding: 10px;
+  color: white;
+}
+
 li {
   cursor: pointer;
 }
 
 .name {
   padding-top: 20px;
+}
+
+.standTipe {
+  font-size: 40px;
+  font-weight: 600;
+  color: #333;
+  padding-top: 30px;
+}
+
+.imageFloor {
+  width: 200px;
+}
+
+.imageArea {
+  height: 230px;
+  padding-top: 10px;
 }
