--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -42,4 +42,6 @@
   box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.8);
   background-color: rgb(223, 223, 223);
   border-radius: 10px;
+  padding-bottom: 15px;
+  padding-top: 15px;
 }
