--- a/src/Components/Form/Form.scss
+++ b/src/Components/Form/Form.scss
@@ -34,4 +34,31 @@
     color: red;
     font-size: 15px;
   }
+
+  .submitButton {
+    padding: 12px 40px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
+    background-color: rgba(237, 205, 31, 1);
+    font-size: 20px;
+    font-weight: 700;
+    margin: 5px;
+    border: transparent;
+    color: black;
+  }
+
+  .buttonTopForm {
+    width: 250px;
+    height: 50px;
+    border-radius: 10px;
+    border-bottom-left-radius: 0em;
+    border-bottom-right-radius: 0;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
+    background-color: rgb(122, 122, 122);
+    font-size: 20px;
+    font-weight: 700;
+    margin: 5px;
+    border: transparent;
+    color: white;
+  }
 }
