--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -37,11 +37,43 @@
   }
 }
 
-.form-wrapper {
-  margin: 50px 300px;
-  box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.8);
-  background-color: rgb(223, 223, 223);
-  border-radius: 10px;
-  padding-bottom: 15px;
-  padding-top: 15px;
+@media (max-width: 767px) {
+  .form-wrapper {
+    margin: 3vw 10vw;
+    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.8);
+    background-color: rgb(223, 223, 223);
+    border-radius: 10px;
+    padding-bottom: 15px;
+    padding-top: 15px;
+  }
+}
+@media (min-width: 768px) {
+  .form-wrapper {
+    margin: 3vw 8vw;
+    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.8);
+    background-color: rgb(223, 223, 223);
+    border-radius: 10px;
+    padding-bottom: 15px;
+    padding-top: 15px;
+  }
+}
+@media (min-width: 992px) {
+  .form-wrapper {
+    margin: 3vw 8vw;
+    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.8);
+    background-color: rgb(223, 223, 223);
+    border-radius: 10px;
+    padding-bottom: 15px;
+    padding-top: 15px;
+  }
+}
+@media (min-width: 1200px) {
+  .form-wrapper {
+    margin: 3vw 20vw;
+    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.8);
+    background-color: rgb(223, 223, 223);
+    border-radius: 10px;
+    padding-bottom: 15px;
+    padding-top: 15px;
+  }
 }
