--- a/src/Components/Area/Area.scss
+++ b/src/Components/Area/Area.scss
@@ -2,49 +2,6 @@ div {
   text-align: center;
 }
 
-.areaSelection {
-  font-size: 40px;
-  font-weight: 600;
-  color: #333;
-  padding-top: 30px;
-}
-
-.displayArea {
-  margin: 0 120px;
-}
-
-.portafolio {
-  border-radius: 5px;
-  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.7);
-  background-color: rgb(255, 255, 255);
-  margin: 15px 5px 30px 5px;
-  padding-bottom: 15px;
-}
-
-.size {
-  font-size: 30px;
-  font-weight: 700;
-  padding-bottom: 10px;
-  padding-top: 10px;
-  color: #cac8c8;
-}
-
-.includes {
-  font-size: 20px;
-  font-weight: 700;
-}
-
-.includes2 {
-  padding-bottom: 20px;
-}
-
-.price {
-  color: rgba(237, 205, 31, 1);
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 30px;
-}
-
 .image {
   align-items: center;
 }
@@ -54,20 +11,297 @@ div {
 }
 li {
   cursor: pointer;
+  list-style: none;
 }
 
-.priceText {
-  color: rgba(237, 205, 31, 1);
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 30px;
+.displayArea {
+  display: inline-flex;
 }
 
-.sizeNumber {
-  font-weight: 700;
-  font-size: 100px;
-  color: #dbdbdb;
-  line-height: 40px;
-  padding-top: 35px;
-  text-shadow: 2px 2px 2px rgb(66, 66, 66);
+@media (max-width: 767px) {
+  .areaSelection {
+    font-size: 4vw;
+    font-weight: 600;
+    color: #333;
+    padding-top: 3vw;
+    padding-bottom: 6vw;
+    height: 1vw;
+  }
+
+  .portafolio {
+    border-radius: 1vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.7);
+    background-color: rgb(255, 255, 255);
+    margin: 3vw 10vw 3vw 10vw;
+    padding-bottom: 3vw;
+    max-width: 330px;
+    display: inline-block;
+  }
+  .imageArea {
+    padding: 2vw;
+    width: 100%;
+    height: auto !important;
+  }
+
+  .sizeNumber {
+    font-weight: 700;
+    font-size: 15vw;
+    color: #dbdbdb;
+    line-height: 4vw;
+    padding-top: 3vw;
+    text-shadow: 2px 2px 2px rgb(66, 66, 66);
+  }
+
+  .sizeText {
+    font-size: 3vw;
+    font-weight: 700;
+    padding-bottom: 1vw;
+    padding-top: 4vw;
+    color: #afaeae;
+  }
+
+  .includes {
+    font-size: 3vw;
+    font-weight: 700;
+  }
+
+  .includes1 {
+    font-size: 2.5vw;
+  }
+
+  .includes2 {
+    padding-bottom: 3vw;
+    font-size: 2.5vw;
+  }
+
+  .price {
+    color: rgba(237, 205, 31, 1);
+    font-size: 5vw;
+    font-weight: 700;
+  }
+  .priceText {
+    color: rgba(237, 205, 31, 1);
+    font-size: 3vw;
+    font-weight: 700;
+    line-height: 1vw;
+  }
+}
+
+@media (min-width: 768px) {
+  .areaSelection {
+    font-size: 3.5vw;
+    font-weight: 600;
+    color: #333;
+    padding-top: 2vw;
+    padding-bottom: 3vw;
+    height: 1vw;
+  }
+
+  .areaWrapper {
+    margin: 0 2vw;
+  }
+
+  .portafolio {
+    border-radius: 1vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.7);
+    background-color: rgb(255, 255, 255);
+    margin: 3vw 0;
+    padding-bottom: 3vw;
+    max-width: 330px;
+    display: inline-block;
+  }
+  .imageArea {
+    padding: 1vw;
+    width: 100%;
+    height: auto !important;
+  }
+
+  .sizeNumber {
+    font-weight: 700;
+    font-size: 8vw;
+    color: #dbdbdb;
+    line-height: 4vw;
+    padding-top: 1vw;
+    text-shadow: 2px 2px 2px rgb(66, 66, 66);
+  }
+
+  .sizeText {
+    font-size: 2.5vw;
+    font-weight: 700;
+    padding-bottom: 0.5vw;
+    padding-top: 1.5vw;
+    color: #afaeae;
+  }
+
+  .includes {
+    font-size: 2vw;
+    font-weight: 700;
+  }
+
+  .includes1 {
+    font-size: 1.5vw;
+  }
+
+  .includes2 {
+    padding-bottom: 2vw;
+    font-size: 1.5vw;
+  }
+
+  .price {
+    color: rgba(237, 205, 31, 1);
+    font-size: 3vw;
+    font-weight: 700;
+  }
+  .priceText {
+    color: rgba(237, 205, 31, 1);
+    font-size: 2vw;
+    font-weight: 700;
+    line-height: 1vw;
+  }
+}
+
+@media (min-width: 992px) {
+  .areaSelection {
+    font-size: 3vw;
+    font-weight: 600;
+    color: #333;
+    padding-top: 2vw;
+    padding-bottom: 3vw;
+    height: 1vw;
+  }
+
+  .areaWrapper {
+    margin: 0 2vw;
+  }
+
+  .portafolio {
+    border-radius: 1vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.7);
+    background-color: rgb(255, 255, 255);
+    margin: 3vw 0;
+    padding-bottom: 1vw;
+    max-width: 330px;
+    display: inline-block;
+  }
+  .imageArea {
+    padding: 1vw;
+    width: 100%;
+    height: auto !important;
+  }
+
+  .sizeNumber {
+    font-weight: 700;
+    font-size: 8vw;
+    color: #dbdbdb;
+    line-height: 4vw;
+    padding-top: 1vw;
+    text-shadow: 2px 2px 2px rgb(66, 66, 66);
+  }
+
+  .sizeText {
+    font-size: 2vw;
+    font-weight: 700;
+    padding-bottom: 1vw;
+    padding-top: 1.5vw;
+    color: #afaeae;
+  }
+
+  .includes {
+    font-size: 1.8vw;
+    font-weight: 700;
+  }
+
+  .includes1 {
+    font-size: 1.2vw;
+  }
+
+  .includes2 {
+    padding-bottom: 2vw;
+    font-size: 1.2vw;
+  }
+
+  .price {
+    color: rgba(237, 205, 31, 1);
+    font-size: 2.5vw;
+    font-weight: 700;
+  }
+  .priceText {
+    color: rgba(237, 205, 31, 1);
+    font-size: 1.8vw;
+    font-weight: 700;
+    line-height: 0.5vw;
+  }
+}
+
+@media (min-width: 1200px) {
+  .areaSelection {
+    font-size: 2vw;
+    font-weight: 600;
+    color: #333;
+    padding-top: 2vw;
+    padding-bottom: 1vw;
+    height: 1vw;
+  }
+
+  .areaWrapper {
+    margin: 0 2vw;
+  }
+
+  .portafolio {
+    border-radius: 1vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.7);
+    background-color: rgb(255, 255, 255);
+    margin: 3vw 0;
+    padding-bottom: 1vw;
+    max-width: 330px;
+    display: inline-block;
+  }
+  .imageArea {
+    padding: 0.5vw;
+    width: 100%;
+    height: auto !important;
+  }
+
+  .sizeNumber {
+    font-weight: 700;
+    font-size: 4.5vw;
+    color: #dbdbdb;
+    line-height: 2vw;
+    padding-top: 1vw;
+    text-shadow: 2px 2px 2px rgb(66, 66, 66);
+  }
+
+  .sizeText {
+    font-size: 1.2vw;
+    font-weight: 700;
+    padding-bottom: 0.2vw;
+    padding-top: 1vw;
+    color: #afaeae;
+  }
+
+  .includes {
+    font-size: 1.1vw;
+    font-weight: 700;
+  }
+
+  .includes1 {
+    font-size: 1vw;
+  }
+
+  .includes2 {
+    padding-bottom: 1vw;
+    font-size: 1vw;
+  }
+
+  .price {
+    color: rgba(237, 205, 31, 1);
+    font-size: 1.8vw;
+    font-weight: 700;
+  }
+  .priceText {
+    color: rgba(237, 205, 31, 1);
+    font-size: 1.2vw;
+    font-weight: 700;
+    line-height: 0.5vw;
+  }
 }
