--- a/src/Components/Furniture/Furniture.scss
+++ b/src/Components/Furniture/Furniture.scss
@@ -1,87 +1,314 @@
-.showFurnitureList {
-  border-radius: 5px;
-  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
-  background-color: rgb(255, 255, 255);
-  margin: 15px 50px 30px 50px;
-  padding: 10px 100px;
-  line-height: 30px;
+@media (max-width: 767px) {
+  .showFurnitureList {
+    border-radius: 2vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
+    background-color: rgb(255, 255, 255);
+    margin: 1vw 7vw 2vw 7vw;
+    padding: 1vw 15vw;
+    line-height: 5vw;
 
-  .image {
-    width: auto;
-    background-color: white;
-    // border-radius: 0;
-    // box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0);
+    .imageFurniture {
+      width: 25vw;
+      background-color: white;
+      max-width: 200px;
+      max-height: 200px;
+      padding-bottom: 3vw;
+    }
+
+    .showFurniture {
+      width: auto;
+    }
+
+    .priceFurniture {
+      font-size: 4vw;
+    }
+
+    .nameFurniture {
+      font-size: 4vw;
+      font-weight: 700;
+    }
+
+    .addQuantitySection {
+      display: inline-flex;
+      font-weight: 700;
+      margin: 2vw;
+      padding-bottom: 10vw;
+    }
+
+    .buttonQuantityAdd {
+      border-top-right-radius: 3vw;
+      border-bottom-right-radius: 3vw;
+      font-size: 5vw;
+      background-color: rgba(237, 205, 31, 1);
+      color: white;
+      font-weight: 1000;
+      box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.4);
+      border: transparent;
+      width: 6vw;
+      padding: 1vw;
+      text-align: center;
+      z-index: 10;
+    }
+
+    .buttonQuantityRest {
+      border-top-left-radius: 3vw;
+      border-bottom-left-radius: 3vw;
+      font-size: 5vw;
+      background-color: rgba(237, 205, 31, 1);
+      color: white;
+      font-weight: 1000;
+      box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.4);
+      border: transparent;
+      width: 6vw;
+      padding: 1vw;
+      text-align: center;
+      z-index: 10;
+    }
+
+    .quantity {
+      text-align: center;
+      background-color: #dddddd;
+      width: 12vw;
+      box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.4);
+    }
   }
+}
+@media (min-width: 768px) {
+  .showFurnitureList {
+    border-radius: 2vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
+    background-color: rgb(255, 255, 255);
+    margin: 1vw 7vw 2vw 7vw;
+    padding: 1vw 4vw;
+    line-height: 3vw;
 
-  .showFurniture {
-    width: auto;
+    .imageFurniture {
+      width: 15vw;
+      background-color: white;
+      max-width: 200px;
+      max-height: 150px;
+      padding-bottom: 3vw;
+    }
+
+    .showImage {
+      height: 150px;
+    }
+
+    .showFurniture {
+      width: auto;
+    }
+
+    .priceFurniture {
+      font-size: 2vw;
+    }
+
+    .nameFurniture {
+      font-size: 2vw;
+      font-weight: 700;
+    }
+
+    .addQuantitySection {
+      display: inline-flex;
+      font-weight: 700;
+      margin: 1vw;
+      padding-bottom: 5vw;
+    }
+
+    .buttonQuantityAdd {
+      border-top-right-radius: 3vw;
+      border-bottom-right-radius: 3vw;
+      font-size: 3vw;
+      background-color: rgba(237, 205, 31, 1);
+      color: white;
+      font-weight: 1000;
+      box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.4);
+      border: transparent;
+      width: 4vw;
+      // padding: 1vw;
+      text-align: center;
+      z-index: 10;
+    }
+
+    .buttonQuantityRest {
+      border-top-left-radius: 3vw;
+      border-bottom-left-radius: 3vw;
+      font-size: 3vw;
+      background-color: rgba(237, 205, 31, 1);
+      color: white;
+      font-weight: 1000;
+      box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.4);
+      border: transparent;
+      width: 4vw;
+      // padding: 1vw;
+      text-align: center;
+      z-index: 10;
+    }
+
+    .quantity {
+      text-align: center;
+      background-color: #dddddd;
+      width: 6vw;
+      box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.4);
+    }
   }
+}
 
-  .categorydisplay {
-    font-size: 60px;
-    color: #c6c6c6;
-    font-weight: 700;
-    line-height: 55px;
+@media (min-width: 992px) {
+  .showFurnitureList {
+    border-radius: 2vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
+    background-color: rgb(255, 255, 255);
+    margin: 1vw 7vw 2vw 7vw;
+    padding: 1vw 4vw;
+    line-height: 2.5vw;
+
+    .imageFurniture {
+      width: 10vw;
+      background-color: white;
+      max-width: 200px;
+      max-height: 150px;
+      padding-bottom: 2vw;
+    }
+
+    .showImage {
+      height: 150px;
+    }
+
+    .showFurniture {
+      width: auto;
+    }
+
+    .priceFurniture {
+      font-size: 1.5vw;
+    }
+
+    .nameFurniture {
+      font-size: 1.5vw;
+      font-weight: 700;
+    }
+
+    .addQuantitySection {
+      display: inline-flex;
+      font-weight: 700;
+      margin: 1vw;
+      padding-bottom: 4vw;
+    }
+
+    .buttonQuantityAdd {
+      border-top-right-radius: 3vw;
+      border-bottom-right-radius: 3vw;
+      font-size: 2vw;
+      background-color: rgba(237, 205, 31, 1);
+      color: white;
+      font-weight: 1000;
+      box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.4);
+      border: transparent;
+      width: 3vw;
+      // padding: 1vw;
+      text-align: center;
+      z-index: 10;
+    }
+
+    .buttonQuantityRest {
+      border-top-left-radius: 3vw;
+      border-bottom-left-radius: 3vw;
+      font-size: 2vw;
+      background-color: rgba(237, 205, 31, 1);
+      color: white;
+      font-weight: 1000;
+      box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.4);
+      border: transparent;
+      width: 3vw;
+      // padding: 1vw;
+      text-align: center;
+      z-index: 10;
+    }
+
+    .quantity {
+      text-align: center;
+      background-color: #dddddd;
+      width: 4vw;
+      box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.4);
+    }
   }
+}
 
-  .showImage {
-    height: 130px;
-  }
+@media (min-width: 1200px) {
+  .showFurnitureList {
+    border-radius: 2vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
+    background-color: rgb(255, 255, 255);
+    margin: 1vw 7vw 2vw 7vw;
+    padding: 1vw 4vw;
+    line-height: 1.5vw;
 
-  .price {
-    font-size: 20px;
-  }
+    .imageFurniture {
+      width: 8vw;
+      background-color: white;
+      max-width: 200px;
+      max-height: 150px;
+      padding-bottom: 2vw;
+    }
 
-  .name {
-    font-weight: 700;
-  }
+    .showImage {
+      height: 150px;
+    }
 
-  .selection {
-    min-width: 80px;
-    width: 80px;
-    min-height: 60px;
-    font-weight: 300;
+    .showFurniture {
+      width: auto;
+    }
 
-    margin-left: 70px;
-  }
+    .priceFurniture {
+      font-size: 1vw;
+    }
 
-  .addQuantitySection {
-    display: inline-flex;
-    font-weight: 700;
-    margin: 10px;
-  }
+    .nameFurniture {
+      font-size: 1vw;
+      font-weight: 700;
+    }
 
-  .buttonQuantityAdd {
-    border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px;
-    font-size: 30px;
-    background-color: rgba(237, 205, 31, 1);
-    color: white;
-    font-weight: 1000;
-    box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.4);
-    border: transparent;
-    width: 30px;
-    text-align: center;
-    z-index: 10;
-  }
+    .addQuantitySection {
+      display: inline-flex;
+      font-weight: 700;
+      margin: 1vw;
+      padding-bottom: 4vw;
+    }
 
-  .buttonQuantityRest {
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
-    font-size: 30px;
-    background-color: rgba(237, 205, 31, 1);
-    color: white;
-    font-weight: 1000;
-    box-shadow: -2px 3px 8px 1px rgba(0, 0, 0, 0.4);
-    border: transparent;
-    width: 30px;
-    z-index: 10;
-  }
+    .buttonQuantityAdd {
+      border-top-right-radius: 3vw;
+      border-bottom-right-radius: 3vw;
+      font-size: 1.5vw;
+      background-color: rgba(237, 205, 31, 1);
+      color: white;
+      font-weight: 1000;
+      box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.4);
+      border: transparent;
+      width: 1.5vw;
+      // padding: 1vw;
+      text-align: center;
+      z-index: 10;
+    }
 
-  .quantity {
-    text-align: center;
-    background-color: #dddddd;
-    width: 50px;
-    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.4);
+    .buttonQuantityRest {
+      border-top-left-radius: 3vw;
+      border-bottom-left-radius: 3vw;
+      font-size: 1.5vw;
+      background-color: rgba(237, 205, 31, 1);
+      color: white;
+      font-weight: 1000;
+      box-shadow: 2px 3px 8px 1px rgba(0, 0, 0, 0.4);
+      border: transparent;
+      width: 1.5vw;
+      // padding: 1vw;
+      text-align: center;
+      z-index: 10;
+    }
+
+    .quantity {
+      text-align: center;
+      background-color: #dddddd;
+      width: 2.5vw;
+      box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.4);
+    }
   }
 }
