--- a/src/Components/Products/Products.scss
+++ b/src/Components/Products/Products.scss
@@ -1,72 +1,353 @@
-.section3 {
-  text-align: center;
-  border-radius: 5px;
-  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
-  background-color: rgb(255, 255, 255);
-  margin: 15px 50px 30px 50px;
-  padding: 10px 100px;
-}
-
-h3 {
-  font-size: 30px;
-  color: #333;
-  padding: 20px;
-}
-
-.image {
-  align-items: center;
-  margin-top: 10px;
-}
-
 .noSpace {
   opacity: 0.5;
-}
-
-.space {
-  font-size: 20px;
-  font-weight: 700;
-  background-color: rgba(237, 205, 31, 1);
-  border-radius: 5px;
-  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
-  margin-bottom: 10px;
-  padding-bottom: 10px;
 }
 
 .noFloorTipe {
   opacity: 0.5;
 }
 
-.floorTipe {
-  font-size: 20px;
-  font-weight: 700;
-  background-color: rgb(0, 0, 0);
-  border-radius: 5px;
-  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
-  margin: 0 45px 10px 45px;
-  padding: 10px;
-  color: white;
-}
-
 li {
   cursor: pointer;
 }
 
-.name {
-  padding-top: 20px;
+@media (max-width: 767px) {
+  .section3 {
+    border-radius: 1vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.7);
+    background-color: rgb(255, 255, 255);
+    margin: 3vw 0;
+    padding-bottom: 1vw;
+    display: inline-block;
+  }
+
+  // h3 {
+  //   font-size: 30px;
+  //   color: #333;
+  //   padding: 20px;
+  // }
+
+  .imageSpace {
+    align-items: center;
+    padding: 3vw 1vw 2vw 1vw;
+    width: 100%;
+    height: auto !important;
+    border-radius: 2vw;
+    max-width: 400px;
+  }
+  .space {
+    font-size: 4vw;
+    font-weight: 700;
+    background-color: rgba(237, 205, 31, 1);
+    border-radius: 2vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
+    margin: 0 7vw 2vw 7vw;
+    // padding-bottom: 1vw;
+  }
+  .noSpace {
+    font-size: 4vw;
+    border-radius: 1vw;
+    margin: 0 7vw 2vw 7vw;
+    // padding-bottom: 1vw;
+  }
+  .floorType {
+    font-size: 4vw;
+    font-weight: 700;
+    background-color: rgb(0, 0, 0);
+    border-radius: 2vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
+    margin: 1vw 7vw 2vw 7vw;
+    // padding: 10px;
+    color: white;
+    display: inline-block;
+  }
+  .noFloorType {
+    font-size: 4vw;
+    border-radius: 1vw;
+    margin: 1vw 7vw 2vw 7vw;
+  }
+  .nameFloor {
+    padding-bottom: 3vw;
+    font-size: 2.8vw;
+  }
+  .nameSpace {
+    padding-bottom: 3vw;
+    font-size: 2.8vw;
+  }
+
+  .standType {
+    font-size: 3.5vw;
+    font-weight: 600;
+    color: #333;
+    padding-top: 5vw;
+    padding-bottom: 6vw;
+    height: 1vw;
+  }
+
+  .imageFloor {
+    width: 25vw;
+    max-width: 400px;
+    padding: 2vw;
+  }
+
+  // .imageArea {
+  //   height: 230px;
+  //   padding-top: 10px;
+  // }
 }
 
-.standTipe {
-  font-size: 40px;
-  font-weight: 600;
-  color: #333;
-  padding-top: 30px;
+@media (min-width: 768px) {
+  .section3 {
+    border-radius: 1vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.7);
+    background-color: rgb(255, 255, 255);
+    margin: 3vw 0;
+    padding-bottom: 1vw;
+    display: inline-block;
+  }
+
+  // h3 {
+  //   font-size: 30px;
+  //   color: #333;
+  //   padding: 20px;
+  // }
+
+  .imageSpace {
+    align-items: center;
+    padding: 3vw 2vw 2vw 2vw;
+    width: 100%;
+    height: auto !important;
+    border-radius: 2vw;
+    max-width: 400px;
+  }
+  .space {
+    font-size: 2vw;
+    font-weight: 700;
+    background-color: rgba(237, 205, 31, 1);
+    border-radius: 2vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
+    margin: 0 1vw 2vw 1vw;
+    // padding-bottom: 1vw;
+  }
+
+  .noSpace {
+    font-size: 2vw;
+    border-radius: 1vw;
+    margin: 0 1vw 2vw 1vw;
+    // padding-bottom: 1vw;
+  }
+  .floorType {
+    font-size: 2vw;
+    font-weight: 700;
+    background-color: rgb(0, 0, 0);
+    border-radius: 2vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
+    margin: 1vw 7vw 2vw 7vw;
+    // padding: 10px;
+    color: white;
+    display: inline-block;
+  }
+  .noFloorType {
+    font-size: 4vw;
+    border-radius: 1vw;
+    margin: 1vw 7vw 2vw 7vw;
+  }
+  .nameFloor {
+    padding-bottom: 3vw;
+    font-size: 2vw;
+  }
+  .nameSpace {
+    padding-bottom: 3vw;
+    font-size: 2vw;
+  }
+
+  .standType {
+    font-size: 4vw;
+    font-weight: 600;
+    color: #333;
+    padding-top: 5vw;
+    padding-bottom: 6vw;
+    height: 1vw;
+  }
+
+  .imageFloor {
+    width: 25vw;
+    max-width: 400px;
+    padding: 2vw;
+  }
+
+  // .imageArea {
+  //   height: 230px;
+  //   padding-top: 10px;
+  // }
 }
 
-.imageFloor {
-  width: 200px;
+@media (min-width: 992px) {
+  .section3 {
+    border-radius: 1vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.7);
+    background-color: rgb(255, 255, 255);
+    margin: 3vw 0;
+    padding-bottom: 1vw;
+    display: inline-block;
+  }
+
+  // h3 {
+  //   font-size: 30px;
+  //   color: #333;
+  //   padding: 20px;
+  // }
+
+  .imageSpace {
+    align-items: center;
+    padding: 1vw 1vw 1vw 1vw;
+    width: 100%;
+    height: auto !important;
+    border-radius: 1vw;
+    max-width: 400px;
+  }
+  .space {
+    font-size: 1.8vw;
+    font-weight: 700;
+    background-color: rgba(237, 205, 31, 1);
+    border-radius: 1vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
+    margin: 1vw 1vw 1vw 1vw;
+    // padding-bottom: 1vw;
+  }
+  .noSpace {
+    font-size: 1.8vw;
+    border-radius: 1vw;
+    margin: 1vw 1vw 1vw 1vw;
+    // padding-bottom: 1vw;
+  }
+
+  .floorType {
+    font-size: 2vw;
+    font-weight: 700;
+    background-color: rgb(0, 0, 0);
+    border-radius: 2vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
+    margin: 2vw 7vw 2vw 7vw;
+    // padding: 10px;
+    color: white;
+    display: inline-block;
+  }
+  .noFloorType {
+    font-size: 2vw;
+    border-radius: 1vw;
+    margin: 2vw 7vw 2vw 7vw;
+  }
+  .nameFloor {
+    padding-bottom: 3vw;
+    font-size: 2vw;
+  }
+  .nameSpace {
+    padding-bottom: 2vw;
+    font-size: 1.8vw;
+  }
+
+  .standType {
+    font-size: 3vw;
+    font-weight: 600;
+    color: #333;
+    padding-top: 4vw;
+    padding-bottom: 3vw;
+  }
+
+  .imageFloor {
+    width: 25vw;
+    max-width: 400px;
+    padding: 2vw;
+  }
+
+  // .imageArea {
+  //   height: 230px;
+  //   padding-top: 10px;
+  // }
 }
 
-.imageArea {
-  height: 230px;
-  padding-top: 10px;
+@media (min-width: 1200px) {
+  .section3 {
+    border-radius: 1vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.7);
+    background-color: rgb(255, 255, 255);
+    margin: 3vw 0;
+    padding-bottom: 1vw;
+    display: inline-block;
+  }
+
+  // h3 {
+  //   font-size: 30px;
+  //   color: #333;
+  //   padding: 20px;
+  // }
+
+  .imageSpace {
+    align-items: center;
+    padding: 1vw 1vw 1vw 1vw;
+    width: 100%;
+    height: auto !important;
+    border-radius: 1vw;
+    max-width: 400px;
+  }
+  .space {
+    font-size: 1.2vw;
+    font-weight: 700;
+    background-color: rgba(237, 205, 31, 1);
+    border-radius: 1vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
+    margin: 0 1vw 1vw 1vw;
+    // padding-bottom: 1vw;
+  }
+  .noSpace {
+    font-size: 1.2vw;
+    border-radius: 1vw;
+    margin: 0 1vw 1vw 1vw;
+    // padding-bottom: 1vw;
+  }
+
+  .floorType {
+    font-size: 1.2vw;
+    font-weight: 700;
+    background-color: rgb(0, 0, 0);
+    border-radius: 2vw;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.4);
+    margin: 1vw 1vw 1vw 1vw;
+    // padding: 10px;
+    color: white;
+    display: inline-block;
+  }
+  .noFloorType {
+    font-size: 1.2vw;
+    border-radius: 1vw;
+    margin: 1vw 1vw 1vw 1vw;
+  }
+  .nameFloor {
+    padding-bottom: 3vw;
+    font-size: 1.2vw;
+  }
+  .nameSpace {
+    padding-bottom: 1vw;
+    font-size: 1.2vw;
+  }
+
+  .standType {
+    font-size: 2vw;
+    font-weight: 600;
+    color: #333;
+    padding-top: 3vw;
+    padding-bottom: 3vw;
+    height: 1vw;
+  }
+
+  .imageFloor {
+    width: 20vw;
+    max-width: 300px;
+    padding: 1vw;
+  }
+
+  // .imageArea {
+  //   height: 230px;
+  //   padding-top: 10px;
+  // }
 }
